// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrdersTileItem component should render correctly 1`] = `
<Styled(BodyCopy)
  className="elem-mb-LRG"
  color="text.primary"
  component="div"
  fontFamily="primary"
  fontSize={12}
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  textAlign="left"
>
  <Styled(BodyCopy)
    className="elem-mt-XXXS"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="span"
      data-locator="emailLbl"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_ordersTile_orderNum
      : 
      <Styled(Anchor)
        anchorVariation="primary"
        asPath="/account/orders/order-details/7000037172"
        dataLocator="order-number-value"
        fontFamily="secondary"
        fontSize="fs14"
        fontSizeVariation="large"
        to="/account?id=orders&subSection=order-details&orderId=7000037172"
        underline={true}
      >
        7000037172
      </Styled(Anchor)>
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-XXXS"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="span"
      data-locator="emailLbl"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_orders_orderDate
      : 
      Oct 6, 2019
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-XXXS"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="span"
      data-locator="emailLbl"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_ordersTile_purchase
      : 
      lbl_orders_online
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-XXXS"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="span"
      data-locator="emailLbl"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_orders_orderStatus
      : 
      lbl_orders_statusNa
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-XXXS"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="span"
      data-locator="emailLbl"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_orders_orderTotal
      : 
      $24.95
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
</Styled(BodyCopy)>
`;

exports[`OrdersTileItem component should render correctly 2`] = `
<Styled(BodyCopy)
  className="elem-mb-LRG"
  color="text.primary"
  component="div"
  fontFamily="primary"
  fontSize={12}
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  textAlign="left"
>
  <Styled(BodyCopy)
    className="elem-mt-XXXS"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="span"
      data-locator="emailLbl"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_ordersTile_orderNum
      : 
      <Styled(Anchor)
        anchorVariation="primary"
        asPath="/account/orders/order-details/undefined"
        dataLocator="order-number-value"
        fontFamily="secondary"
        fontSize="fs14"
        fontSizeVariation="large"
        to="/account?id=orders&subSection=order-details&orderId=undefined"
        underline={true}
      />
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-XXXS"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="span"
      data-locator="emailLbl"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_orders_orderDate
      : 
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-XXXS"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="span"
      data-locator="emailLbl"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_ordersTile_purchase
      : 
      lbl_orders_pickupStore
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-XXXS"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="span"
      data-locator="emailLbl"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_orders_orderStatus
      : 
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mt-XXXS"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="span"
      data-locator="emailLbl"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      lbl_orders_orderTotal
      : 
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
</Styled(BodyCopy)>
`;
